0.3.1 (8/20/2008)

  - Generated application differences: ``make_app`` entry point
    renamed to ``app`` in order to have a different name than the bfg
    function of the same name, to prevent confusion.

  - Add "options" processing to bfg's ``make_app`` to support runtime
    options.  A new API function named ``get_options`` was added to
    the registry module.  This function is typically used in an
    application's ``app`` entry point.  The Paste config file section
    for the app can now supply the ``reload_templates`` option, which,
    if true, will prevent the need to restart the appserver in order
    for ``z3c.pt`` or XSLT template changes to be detected.

  - Use only the module name in generated project's "test_suite" (run
    all tests found in the package).

  - Default port for generated apps changed from 5432 to 6543
    (Postgres default port is 6543).

0.3.0

  - Add ``get_template`` API to template module.

0.2.9

  - 0.2.8 was "brown bag" release.  It didn't work at all.  Symptom:
    ComponentLookupError when trying to render a page.

0.2.8

  - Add ``find_model`` and ``find_root`` traversal APIs.  In the
    process, make ITraverser a uni-adapter (on context) rather than a
    multiadapter (on context and request).

0.2.7

  - Add a ``request_type`` attribute to the available attributes of a
    ``bfg:view`` configure.zcml element.  This attribute will have a
    value which is a dotted Python path, pointing at an interface.  If
    the request object implements this interface when the view lookup
    is performed, the appropriate view will be called.  This is meant
    to allow for simple "skinning" of sites based on request type.  An
    event subscriber should attach the interface to the request on
    ingress to support skins.

  - Remove "template only" views.  These were just confusing and were
    never documented.

  - Small url dispatch overhaul: the ``connect`` method of the