@@ -18,4 +18,7 @@
       request_type=".views.IDummy"
       />
 
+  <include file="another.zcml"/>
+
+
 </configure>
